# NanoTeam

./: .gitignore  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
data/interim/: .gitignore  Database_3_cleaned.csv
data/raw/: .~lock.Database_1.xlsx#  .~lock.Database_3.xlsx#  Database_1.xlsx  Database_2.xlsx  Database_3.xlsx  Database_4.xlsx  Database_5.xlsx
docker/: nginx.conf
docker/model_service/: Dockerfile
docker/nginx/: Dockerfile
models/: .gitignore  codes.json  features.json  model.clf  parameters.json  scaler.save
notebooks/: Model.ipynb
src/backend/: constants.py  main.py  main_old.py  model.clf  toxic.csv
src/data/: clean.py
src/frontend/: index.html
src/frontend/blocks/footer/: footer.css
src/frontend/blocks/header/: header.css
src/frontend/blocks/header/__logo/: header__logo.css
src/frontend/blocks/header/__nav/: header__nav.css
src/frontend/blocks/header/__nav-text/: header__nav-text.css
src/frontend/blocks/input/: input.css
src/frontend/blocks/input/__breadcrumbs/: input__breadcrumbs.css
src/frontend/blocks/input/__desc/: input__desc.css
src/frontend/blocks/input/__form/: input__form.css
src/frontend/blocks/input/__input-container/: input__input-container.css
src/frontend/blocks/other/: other.css
src/frontend/blocks/page/: page.css
src/frontend/blocks/preview/: preview.css
src/frontend/blocks/utp/: utp.css
src/frontend/css/: fonts.css  main.css
src/frontend/font/: stylesheet.css
src/frontend/js/: index.js
src/frontend/pages/: index.html
src/models/: evaluate.py  prepare_dataset.py  train.py
(+23 files in other folders)
