[tool.poetry]
name = "biotech"
version = "0.1"
description = ""
authors = ["NanoTeam"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
joblib = "^1.1.0"
pandas = "^1.4.4"
sklearn = "^0.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
