[tool.poetry]
name = "biotech"
version = "0.1"
description = ""
authors = ["NanoTeam"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.4"
sklearn = "^0.0"
joblib = "^1.1.0"
dvc = "^2.24.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
